--- a/非洲猪瘟--预防和现状.md
+++ b/非洲猪瘟--预防和现状.md
@@ -1,3 +1,12 @@
-#非洲猪瘟
+# 非洲猪瘟
 ## 消毒
 常用的碱性、含氯消毒剂也可杀灭病毒，如：8‰烧碱、次氯酸盐（2.3%有效氯）等。
+
+ 一是强化应急处置措施，扑杀病猪及风险猪群，并通过化制、深埋等措施进行无害化处理，及时消灭传染源；
+ 二是禁止将生猪及其产品从疫区外调，关闭活畜禽运输绿色通道，关闭高风险区生猪交易市场，加强生猪运输车辆消毒、管理，以切断疫情传播途径；
+ 三是加强规模猪场和种猪场防控力度，禁止将餐厨剩余物喂猪，清洗消毒生猪饲养圈舍，提升养殖场生物安全防护水平，保护生猪免受感染。
+ 
+ 应采取避免喂饲泔水、对新引进的猪进行检疫隔离等措施，一旦发现猪群中出现零星猪只高烧、死亡应高度警觉，立即隔离猪群、限制猪群移动，并立即报告兽医和动物疫病防控部门，同时做好消毒工作，配合有关部门做好监管。
+
+
+发病猪只，特征为发高热及皮肤呈现紫斑点，全身内脏的出血，尤以淋巴结，肾脏和肠粘膜最明显。病程分甚急、急、亚急与慢性等四种。甚急性：发烧、突然死亡，无其他症状。急性：高烧、食欲尚有、死亡前食欲废绝、呼吸快、精神不良、四肢、耳、皮肤发绀、呕吐、下痢、死亡，为期 7 天。亚急性：发烧， 3-4 星期。慢性：病状不明显，持续数月。目前尚无药物可供治疗及疫苗施打。
